[project]
name = "mdtowechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "markdown==3.7",
    "openai==1.66.3",
    "pillow==11.1.0",
    "pyside6>=6.10.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
